CrashTracer: com.apple.WebKit.WebContent at com.apple.WebKit: WTF::HashTableConstIterator<WTF::String, WTF::KeyValuePair<... https://bugs.webkit.org/show_bug.cgi?id=224637 <rdar://problem/76540809>

Reviewed by Alex Christensen.

If the protocol and host of the SecurityOrigin object are empty,
toRawString() could return null. We should add a valid key check here
before doing a hash table lookup.

* WebProcess/Notifications/WebNotificationManager.cpp:
(WebKit::WebNotificationManager::policyForOrigin const):


Canonical link: https://commits.webkit.org/236608@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276108 268f45cc-cd09-0410-ab3c-d52691b4dbfc